[FLINK-37599][table] Support column expansion for PTF on_time columns